syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teamHeaderChangedNotify_toS {}

message teamHeaderChangedNotify_toC {}