syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

import "cs/proto/message/team.proto";

message teamPlayerLeaveNotify_toS {}

message teamPlayerLeaveNotify_toC {
    required TeamPlayer player 	= 1;
}